...
                    HStack {
                        Image("Search")
                        TextField("", text: $searchText)
                            .textFieldStyle(PlainTextFieldStyle())
                            .foregroundColor(Color(hex: "8E8E93"))
                            .submitLabel(.search)
                            .accessibilityIdentifier("SearchForExperiences")
                            .onChange(of: searchText) { newValue in
                                if newValue.isEmpty {
                                    // Exit search state when searchText is cleared
                                    isSearching = false
                                    viewModel.fetchRecommendedExperiences()
                                    viewModel.fetchMostRecentExperiences()
...
        VStack(alignment: .leading, spacing: 20) {
            // Welcome Section
            VStack(alignment: .leading, spacing: 10) {
                Text("Welcome!")
                    .font(.custom("GothamRounded-Bold", size: 22))
                    .foregroundColor(.black)
                    .accessibilityIdentifier("Welcome")
                Text("Now you can explore any experience in 360 degrees and get all the details about it all in one place.")
                    .font(.custom("GothamMedium", size: 14))
                    .foregroundColor(.black)
            }
            .padding(.all)

...
